Fixed a bug on mobile version

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -7,12 +7,12 @@
   .wrapper {
     margin: auto !important;
     padding: 0px !important;
-    padding-top: 30px !important;
+    padding-top: 150px !important;
     padding-bottom: 30px !important;
   }
 
   .box {
-    margin-left: 50px !important;
+    margin-left: 40px !important;
     padding: 0px !important;
     width: 60% !important;
   }
